# uopenapi-service

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: ci.yaml
configs/: config_vars.yaml  static_config.yaml
postgresql/todo_db/: 000_init.sql
scripts/: generate_sql_queries.py
service/: main.cpp
src/helpers/: auth.cpp  auth.hpp
src/models/: auth.hpp  error_response.hpp  task.hpp
src/sql/user/: create_user.sql  get_token.sql
src/views/login/: handler.cpp  handler.hpp  handler_fwd.hpp  io.hpp
src/views/register/: handler.cpp  handler.hpp  handler_fwd.hpp  io.hpp
tests/: conftest.py  test_login.py  test_register.py
tests/postgresql/: init_data_user.sql
